[package]
name = "ref-portals"
version = "1.0.0-beta.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Safely use (stack) references outside their original scope"
repository = "https://github.com/Tamschi/ref-portals"
documentation = "https://docs.rs/ref-portals/1.0.0-beta.1/"
readme = "README.md"
keywords = ["extend", "lifetime", "portal", "reference", "safe"]
categories = ["concurrency", "rust-patterns"]
include = ["/LICENSE*", "/README.md", "/src/**.rs", "/tests/**.rs"]

[dependencies]
wyz = "0.2.0"

[dev-dependencies]
assert-impl = "0.1.3"
assert-panic = "1.0.0-preview.1"
version-sync = "0.9.0"
